# rn-document-scanner

./: .npmignore  LICENSE  README.md  package.json  react-native.config.js  rn-document-scanner.podspec  tsconfig.build.json  tsconfig.json
android/: build.gradle
android/src/main/: AndroidManifest.xml
android/src/main/cpp/: CMakeLists.txt  jni_bridge.cpp
android/src/main/java/com/rndocumentscanner/: DocumentScannerModule.kt  DocumentScannerPackage.kt
ios/: DocumentScannerModule.h  DocumentScannerModule.mm
lib/: NativeDocumentScanner.d.ts  NativeDocumentScanner.d.ts.map  NativeDocumentScanner.js  NativeDocumentScanner.js.map  index.d.ts  index.d.ts.map  index.js  index.js.map  types.d.ts  types.d.ts.map
lib/components/: DocumentScanner.d.ts  DocumentScanner.d.ts.map  DocumentScanner.js  DocumentScanner.js.map
lib/hooks/: useAutoCapture.d.ts  useAutoCapture.d.ts.map  useAutoCapture.js  useAutoCapture.js.map
lib/utils/: deviceTier.d.ts  deviceTier.d.ts.map  deviceTier.js  deviceTier.js.map  scaleCorners.d.ts  scaleCorners.d.ts.map  scaleCorners.js  scaleCorners.js.map  scanDocument.d.ts  scanDocument.d.ts.map  scanDocument.js  scanDocument.js.map
shared/: document_detector.cpp  document_detector.hpp
src/: NativeDocumentScanner.ts  index.ts  types.ts
src/components/: DocumentScanner.tsx
src/hooks/: useAutoCapture.ts
src/utils/: deviceTier.ts  scaleCorners.ts  scanDocument.ts
